# python-telegram-youtube-bot

./: .coverage  .gitignore  PHASE_3_SUMMARY.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PROJECT_STATUS_DASHBOARD.md  README.md  TROUBLESHOOTING_NETWORK.md  authorized_users.db  coverage.xml  download_manager.py  file_uploader.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_bot.bat  run_tests.py  telegram_handlers.py  telegram_youtube_bot.py  test_youtube_bot.py  test_youtube_integration.py  users.db  view_db.py
.lingma/rules/: run.md
config/: config.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: MODULE_REFACTORING.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_FINAL_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_COMPLETE.md  PROJECT_STATUS_DASHBOARD.md  README.md
examples/: phase2_usage_example.py
extractors/: archive_ragtag.py
src/: __init__.py  main.py
src/application/: __init__.py
src/application/handlers/: __init__.py  base_handler.py  callbacks.py  commands.py  inline.py  registration.py
src/application/services/: __init__.py  cache_service.py  download_service.py  queue_service.py  telegram_service.py  youtube_service.py
src/core/: __init__.py  config.py  container.py  exceptions.py  logging_config.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  download_task.py  user.py  video.py
src/domain/services/: __init__.py
src/infrastructure/: __init__.py
src/tests/: __init__.py
src/tests/fixtures/: __init__.py  (+2 more)
(+24 files in other folders)
